<resources>
    <string name="app_name">YPJ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok_button_string">OK</string>
    <string name="view_all_button_string">View All</string>
    <string name="update_button_string">Update</string>
    <string name="delete_button_string">Delete</string>
    <string name="name_placeholder_string">Enter Your Name Here</string>
    <string name="email_placeholder_string">Enter Your Email Here</string>
    <string name="id_placeholder_string">Enter Your ID Here</string>
</resources>
