<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/light_blue"
                tools:context=".MainYPJFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button_string"
        android:id="@+id/ok_button"
        android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_button_string"
        android:id="@+id/view_all_button"
        android:layout_alignParentBottom="true" android:layout_toRightOf="@+id/ok_button"
        android:layout_toEndOf="@+id/ok_button"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_button_string"
        android:id="@+id/update_button"
        android:layout_alignParentBottom="true" android:layout_toRightOf="@+id/view_all_button"
        android:layout_toEndOf="@+id/view_all_button"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button_string"
        android:id="@+id/delete_button"
        android:layout_alignParentBottom="true" android:layout_toRightOf="@+id/update_button"
        android:layout_toEndOf="@+id/update_button"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textSize="@dimen/activity_text_size"
        android:id="@+id/editableName"
        android:hint="@string/name_placeholder_string"
        android:padding="20dp"
        android:layout_alignRight="@+id/imageViewLog"
        android:layout_alignEnd="@+id/imageViewLog"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textSize="@dimen/activity_text_size"
        android:id="@+id/editableEmail"
        android:hint="@string/email_placeholder_string"
        android:padding="20dp"
        android:layout_below="@+id/editableName"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textSize="@dimen/activity_text_size"
        android:id="@+id/editableId"
        android:hint="@string/id_placeholder_string"
        android:padding="20dp"
        android:layout_below="@+id/editableEmail"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/imageViewLog"
        android:src="@drawable/default_image"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:layout_above="@+id/ok_button" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
